crates/tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_var_in_contract_method.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: a variable with the same name already exists in this scope
  ┌─ fixtures/compile_errors/duplicate_var_in_contract_method.fe:4:9
  │
4 │         foo: u8
  │         ^^^ Conflicting definition of `foo` variables
  │
  = Note: Give one of the `foo` variables a different name


